# BourstadLib

./: .gitignore  pyproject.toml
bourstadlib/: config.py
